added telegram bot first running

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 TELEGRAM_API=5145218551:AAGYg-E7eBTBmvMGeIIiNXhHI2hShEbrLMw
+DB_URI=mongodb+srv://vaskania:Hofmann123@cluster0.vfszr.mongodb.net/forecast?retryWrites=true&w=majority
