--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.1.7",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/mongoose": "^9.0.2",
     "@nestjs/platform-express": "^8.0.0",
     "dotenv": "^16.0.0",
+    "mongoose": "^6.2.1",
     "nestjs-telegraf": "^2.4.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
