--- a/package.json
+++ b/package.json
@@ -27,12 +27,16 @@
     "@nestjs/mongoose": "^9.0.2",
     "@nestjs/platform-express": "^8.0.0",
     "dotenv": "^16.0.0",
+    "geo-tz": "^7.0.1",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.34",
     "mongoose": "^6.2.1",
     "nestjs-telegraf": "^2.4.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "telegraf": "^4.7.0"
+    "telegraf": "^4.7.0",
+    "timezoner": "^0.2.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
