--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 TELEGRAM_API=5145218551:AAGYg-E7eBTBmvMGeIIiNXhHI2hShEbrLMw
 DB_URI=mongodb+srv://vaskania:Hofmann123@cluster0.vfszr.mongodb.net/forecast?retryWrites=true&w=majority
+WEATHER_API=64f266fb3ffa0f2b1da717bf3720157e
